# Power_supply_ocr

./: .gitignore  pyproject.toml
src/power_supply_ocr/: data.py  image_processing.py  main.py  video.py
